# rust-webserver

./: Cargo.toml
src/: main.rs
src/handlers/: generate_uuid.rs  health_check.rs  mod.rs  publish.rs  ws.rs
src/structs/: client.rs
src/websocket/: connection.rs
